--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -9,4 +9,7 @@ jobs:
         with:
           node-version: '14'
       - run: npm install
+      - run: npm build --if-present
       - run: ./node_modules/.bin/eslint . --max-warnings=0
+      - name: Test
+      - run: npm test
