--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "if test \"$NODE_ENV\" = \"production\" ; then tsc --build ./tsconfig.prod.json ; else tsc ; fi "
   },
   "keywords": [],
   "author": "",
@@ -13,8 +15,13 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.1"
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.24.1",
+    "typescript": "^4.4.2"
   }
 }
