--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -32,4 +32,4 @@ jobs:
       # - name: eslint
       # - run: ./node_modules/.bin/eslint . --max-warnings=0
       - name: Test
-      - run: npm test
+        run: npm test
