--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,12 +10,13 @@
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 12,
-        "sourceType": "module",
+        "sourceType": "module"
     },
     "plugins": [
         "@typescript-eslint"
     ],
     "rules": {
-        
-    },
+        "semi-spacing": "error",
+        "indent": ["error", 4]
+    }
 }
