--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,19 +4,16 @@
         "node": true,
         "es2021": true
     },
-    "extends": [
-        "google"
-    ],
+    "extends": ["google"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "plugins": [
-        "@typescript-eslint"
-    ],
+    "plugins": ["@typescript-eslint"],
     "rules": {
         "semi-spacing": "error",
-        "indent": ["error", 4]
+        "indent": ["error", 4],
+        "space-in-brackets": ["error", "always"]
     }
 }
