--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "@unicop/github-actions-ci-setup",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "test": "jest",
-    "build": "if test \"$NODE_ENV\" = \"production\" ; then tsc --build ./tsconfig.prod.json ; else tsc ; fi ",
-    "prepare": "husky install",
-    "lint": "./node_modules/.bin/eslint --max-warnings=0",
-    "lint-fix": "./node_modules/.bin/eslint --fix"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.24.1",
-    "jest": "^27.1.0",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.4.2",
-    "husky": "^7.0.0"
-  }
+    "name": "@unicop/ts-node-template",
+    "version": "1.0.0",
+    "description": "",
+    "main": "dist/index.js",
+    "scripts": {
+        "test": "jest",
+        "build": "if test \"$NODE_ENV\" = \"production\" ; then tsc --build ./tsconfig.prod.json ; else tsc ; fi ",
+        "prepare": "husky install",
+        "lint": "./node_modules/.bin/eslint --max-warnings=0",
+        "lint-fix": "./node_modules/.bin/eslint --fix"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.1"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.13",
+        "@types/jest": "^27.0.1",
+        "@typescript-eslint/eslint-plugin": "^4.31.0",
+        "@typescript-eslint/parser": "^4.31.0",
+        "eslint": "^7.32.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-config-google": "^0.14.0",
+        "eslint-plugin-import": "^2.24.1",
+        "husky": "^7.0.0",
+        "jest": "^27.1.0",
+        "prettier": "2.3.2",
+        "ts-jest": "^27.0.5",
+        "typescript": "^4.4.2"
+    }
 }
